--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aioboto3>=13.0.0",
+    "aiohttp>=3.13.0",
+    "aiohttp-ratelimiter>=4.1.3",
+    "asyncio>=4.0.0",
+    "boto3>=1.35.0",
     "databento>=0.64.0",
     "numpy>=2.3.3",
     "pandas>=2.3.3",
+    "polygon>=1.2.8",
+    "polygon-api-client>=1.13.0",
     "python-dotenv>=1.1.1",
+    "ratelimiter>=1.2.0.post0",
     "requests>=2.32.5",
 ]
