--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ dependencies = [
     "aioboto3>=13.0.0",
     "aiohttp>=3.13.0",
     "aiohttp-ratelimiter>=4.1.3",
-    "asyncio>=4.0.0",
     "boto3>=1.35.0",
     "databento>=0.64.0",
     "numpy>=2.3.3",
@@ -18,4 +17,8 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "ratelimiter>=1.2.0.post0",
     "requests>=2.32.5",
+    "ipykernel>=6.29.0",
+    "jupyter>=1.0.0",
+    "tqdm>=4.66.0",
+    "rich>=13.7.0",
 ]
