--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "emerytrading"
+name = "bearplanes"
 version = "0.1.0"
-description = "Add your description here"
+description = "toml file for trading project"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
