--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "bearplanes"
 version = "0.1.0"
@@ -24,6 +28,9 @@ dependencies = [
     "matplotlib>=3.9.0",
     "scipy>=1.11.0",
 ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [dependency-groups]
 dev = [
