--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "boto3>=1.35.0",
     "databento>=0.64.0",
     "numpy>=2.3.3",
-    "pandas>=2.3.3",
+    "pandas>=2.2.0,<2.3",
     "polygon>=1.2.8",
     "polygon-api-client>=1.13.0",
     "python-dotenv>=1.1.1",
@@ -27,6 +27,7 @@ dependencies = [
     "rich>=13.7.0",
     "matplotlib>=3.9.0",
     "scipy>=1.11.0",
+    "wrds>=3.4.0"
 ]
 
 [tool.setuptools.packages.find]
